2008-06-27  David Engster  <dengste@eml.cc>

	* sb-heise.el: (shimbun-heise-content-start)
	(shimbun-heise-content-end): Updated regexps.

2008-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-text-content-start)
	(shimbun-asahi-text-content-end): Update.
	(shimbun-asahi-prepare-article): Update regexp matching useless links;
	add line breaks around images.

2008-06-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-content-end): Update.
	(shimbun-asahi-prepare-article): Add <p>...</p> to articles in tenjin
	group.

2008-06-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Update index urls for
	editorial and tenjin groups.
	(shimbun-asahi-get-headers-for-today): Work.
	(shimbun-asahi-prepare-article): Work for editorial and tenjin groups.

2008-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-content-start, shimbun-asahi-content-end):
	Update regexps.
	(shimbun-asahi-prepare-article): Update regexp matching a top link.

2008-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-content-start, shimbun-asahi-content-end):
	Update regexps temporarily.

2008-06-07  David Engster  <dengste@eml.cc>

	* sb-debugmagazin-de.el (shimbun-debugmagazin-de-group-url-regexp):
	Update groups configuration.
	(shimbun-debugmagazin-de-content-start)
	(shimbun-debugmagazin-de-content-end): Update regexps.

	* sb-perlentaucher-de.el (shimbun-perlentaucher-de-url-regexp): New
	variable.
	(shimbun-rss-build-message-id): Use it.

2008-05-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-impress.el (shimbun-headers): Ignore headers if there's no
	subject.

2008-04-22  David Hansen  <david.hansen@gmx.net>

	* sb-zeit-de.el (shimbun-zeit-de-x-face-alist): New variable.
	(shimbun-zeit-de-content-end): Follow new page layout.
	(shimbun-get-headers): Remove "from=rss" parameter from the URL.
	(shimbun-clear-contents): Filter more junk.
